--- a/src/components/ContactUs/ContactUs.module.css
+++ b/src/components/ContactUs/ContactUs.module.css
@@ -1,6 +1,7 @@
 .heading {
-    color: darkblue;
+    color: wheat;
     font-style: italic;
+    font-size: 2.5rem;
 }
 
 .form {
@@ -11,7 +12,7 @@
     margin: 1rem 0;
     border:1px;
     box-shadow: 2px 3px 3px grey;
-    background-color:#1a63b7;
+    background-color:rgba(255,253,208,0.7);
     width: 30%;
     margin-left: auto;
     margin-right: auto;
@@ -25,7 +26,7 @@
     display: block;
     font-weight: bold;
     margin-bottom: 0.5rem;
-    color: white;
+    color: #5c4033;
   }
   
   .control input,
@@ -46,16 +47,16 @@
   .actions button {
     font: inherit;
     cursor: pointer;
-    background-color: #1a63b7;
-    color: white;
+    background-color:rgba(255,253,208,0.7);
+    color: #5c4033;
     padding: 0.5rem 1.5rem;
-    border: 1px solid#052447;
+    border: 1px solid#5a400d;
     border-radius: 4px;
     font-weight: bold;
   }
   
   .actions button:hover,
   .actions button:active {
-    background-color:#13549f;
-    border-color: #13549f;
+    background-color:#FFBE7C;
+    border-color: #7b3f00;
   }
