--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
+
 .App {
   text-align: center;
-  background-image: url("https://images.pexels.com/photos/1642125/pexels-photo-1642125.jpeg?cs=srgb&dl=pexels-the-lazy-artist-gallery-1642125.jpg&fm=jpg"); 
-  opacity: 0.6;
+  background-image: url("./components/bgimg.jpg"); 
   width: 100%;
   height: 200vh;
+
 }
 
 .App-logo {
