--- a/src/components/PropertyItems/PropertyItems.module.css
+++ b/src/components/PropertyItems/PropertyItems.module.css
@@ -13,6 +13,7 @@
 
 .link {
     font-family: 'Lucida Sans';
+    text-decoration: none;
 }
 
 .card {
@@ -35,16 +36,19 @@
     width: 65px;
     height: 35px;
     border: 1px solid black;
+    transition: 0.2s;
 }
 
 .button:hover{
-    background-color: rgba(255,99,71,0.8);
+    background-color: rgba(27, 173, 27, 0.4);
+    font-weight: bold;
 }
 
 .title{
     font-family: 'Courier New', Courier, monospace;
     font-size: 1.3rem;
     font-style: italic;
+    font-weight: bold;
 }
 
 .text{
