--- a/src/components/SellProperty/SellProperty.module.css
+++ b/src/components/SellProperty/SellProperty.module.css
@@ -52,12 +52,14 @@
     border: 1px solid #5a400d;
     border-radius: 4px;
     font-weight: bold;
+    transition: 0.3s;
   }
   
   .actions button:hover,
   .actions button:active {
     background-color:#FFBE7C;
     border-color: #7b3f00;
+    letter-spacing: 0.3rem;
   }
 
   select{
