--- a/src/components/ToRent/ToRent.module.css
+++ b/src/components/ToRent/ToRent.module.css
@@ -11,6 +11,7 @@
 
 .link {
     font-family: 'Lucida Sans';
+    text-decoration: none;
 }
 
 .card {
@@ -33,10 +34,12 @@
     width: 65px;
     height: 35px;
     border: 1px solid black;
+    transition: 0.2s;
 }
 
 .button:hover{
-    background-color: rgba(255,99,71,0.8);
+    background-color:  rgba(27, 173, 27, 0.4);
+    font-weight: bold;
 }
 
 .title{
