--- a/src/components/WebsiteNavigation.module.css
+++ b/src/components/WebsiteNavigation.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 0 10%;
-    background-color: rgba(255,255,255,0.9);
+    background-color: rgba(255,255,255,0.7);
 }
 
 .logo {
@@ -32,11 +32,13 @@
     text-decoration: none;
     font-size: 1.5rem;
     color: #197cd2;
+    transition: 0.2s;
 }
 
 .header a:hover,
 .header a:active{
     color: darkblue;
+    letter-spacing: 0.3rem;
 }
 
 .left {
